# mlx-examples

./: .gitignore  notes.md  pyproject.toml
llama/: convert.py  infer.py
llms/llama/: .gitignore  convert.py  infer.py  llama.py  lm_format_enforcer_integration_transformers.py  replace_when_test_jsonformer.py  try_output_json2.py  try_output_json_for_jsonformer.py  try_output_json_lm_format_enforcer_example.py
llms/mistral/: convert.py  convert_synthia.py  infer.py
segment_anything/: crop_table_and_ocr.ipynb  demo1.py  trying.py  utils.py  yolo.ipynb  yolo.py  yolo_sam.py
segment_anything/images/tabulation.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
segment_anything/images/tabulation.v1i.yolov8/train/labels/: pdf_table_11-15-48-AM_png.rf.c5983a6f2ae2d34cacf92f6f124fe542.txt  pdf_table_11-15-58-AM_png.rf.794a42fda8a1f626f2a893d3cd492c18.txt  pdf_table_11-16-36-AM_png.rf.a339cfe03480b6372c89a0c4eaa986c2.txt  pdf_table_11-17-00-AM_png.rf.17adac2d62f9c34daed67073a86f6365.txt  pdf_table_11-17-30-AM_png.rf.52598aec24a59e98e84adafc2fbde73c.txt  pdf_table_11-17-49-AM_png.rf.43a2236a8a0e5d6dc989a79eab29774e.txt  pdf_table_11-18-19-AM_png.rf.f4ef55f7546e347d282754bc4a976833.txt  pdf_table_11-18-37-AM_png.rf.97373bee891475ea75821b850742c951.txt  pdf_table_11-18-52-AM_png.rf.a07032b11c12f057e424f42f764e0f75.txt
segment_anything/images/tabulation.v3i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
segment_anything/images/tabulation.v3i.yolov8/train/: labels.cache
segment_anything/images/tabulation.v3i.yolov8/valid/: labels.cache
(+9 files in other folders)
